--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
         <tr>
           <td style="padding:10px;width:100%;vertical-align:middle">
             <a href="https://arxiv.org/abs/2410.10781">
-              <papertitle>When Attention Sink Emerges in Language Models: An Empirical View</papertitle>
+              <papertitle>When Attention Sink Emerges in Language Models: An Empirical View</papertitle> (<font color="red"><strong>Oral</strong></font>)
             </a>
             <br>
-            <strong>Xiangming Gu</strong>,
+            <u><strong>Xiangming Gu</strong></u>,
             <a href="https://p2333.github.io">Tianyu Pang</a>&dagger;,
             <a href="https://duchao0726.github.io">Chao Du</a>,
             <a href="https://siviltaram.github.io">Qian Liu</a>,
@@ -156,7 +156,7 @@
             <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;,
             <a href="http://linmin.me">Min Lin</a>
             <br>
-            Annual Conference on Neural Information Processing Systems Workshop on Attributing Model Behavior at Scale (<em>ATTRIB @ NeurIPS</em>'2024), (<font color="red"><i>Oral</i></font>), Vancouver, Canada.
+            Annual Conference on Neural Information Processing Systems Workshop on Attributing Model Behavior at Scale (<strong>ATTRIB @ NeurIPS</strong>), Vancouver, Canada, 2024.
             <br>
             <a href="https://arxiv.org/pdf/2410.10781">pdf</a> /
             <a href="https://github.com/sail-sg/Attention-Sink">code</a>
@@ -170,14 +170,14 @@
                 <papertitle>On Memorization in Diffusion Models</papertitle>
               </a>
               <br>
-              <strong>Xiangming Gu</strong>,
+              <u><strong>Xiangming Gu</strong></u>,
               <a href="https://duchao0726.github.io">Chao Du</a>&dagger;,
               <a href="https://p2333.github.io">Tianyu Pang</a>&dagger;,
               <a href="https://zhenxuan00.github.io">Chongxuan Li</a>,
               <a href="http://linmin.me">Min Lin</a>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
               <br>
-              <em>Preprints</em>, 2023.
+              Preprints, 2023.
               <br>
               <a href="https://arxiv.org/pdf/2310.02664.pdf">pdf</a> /
               <a href="https://github.com/sail-sg/DiffMemorize">code</a>		
@@ -199,7 +199,7 @@
                 <papertitle>Agent Smith: A Single Image Can Jailbreak <i>One Million</i> Multimodal LLM Agents Exponentially Fast</papertitle>
               </a>
               <br>
-              <strong>Xiangming Gu</strong>*,
+              <u><strong>Xiangming Gu</strong></u>*,
               <a href="https://xszheng2020.github.io">Xiaosen Zheng</a>*,
               <a href="https://p2333.github.io">Tianyu Pang</a>*&dagger;,
               <a href="https://duchao0726.github.io">Chao Du</a>,
@@ -208,9 +208,9 @@
               <a href="http://www.mysmu.edu/faculty/jingjiang/">Jing Jiang</a>&dagger;,
               <a href="http://linmin.me">Min Lin</a>
               <br>
-              International Conference on Machine Learning (<em>ICML</em>'2024), Vienna, Austria.
+              International Conference on Machine Learning (<strong>ICML</strong>), Vienna, Austria, 2024.
               <br>
-              Also in International Conference on Learning Representations Workshop on Large Language Model Agents (<em>LLMAgents @  ICLR</em>'2024).
+              Also in International Conference on Learning Representations Workshop on Large Language Model Agents (<strong>LLMAgents @  ICLR</strong>), Vienna, Austria, 2024.
               <br>
               <a href="pdf/ICML2024.pdf">ICML</a> /
               <a href="https://openreview.net/pdf?id=qsVKqEkre3">ICLR workshop</a> /
@@ -228,16 +228,16 @@
           <tr>
             <td style="padding:10px;width:100%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2410.10414">
-                <papertitle>On Calibration of LLM-based Guard Models for Reliable Content Moderation</papertitle>
+                <papertitle>On Calibration of LLM-based Guard Models for Reliable Content Moderation</papertitle> (<font color="red"><strong>Oral</strong></font>)
               </a>
               <br>
               <a href="https://waffle-liu.github.io">Hongfu Liu</a>&dagger;,
               <a href="https://sites.google.com/view/huanghengguan/homepage">Hengguan Huang</a>,
               <a href="http://www.wanghao.in">Hao Wang</a>,
-              <strong>Xiangming Gu</strong>,
+              <u><strong>Xiangming Gu</strong></u>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
               <br>
-              Annual Conference on Neural Information Processing Systems Safe Generative AI Workshop (<em>SafeGenAI @ NeurIPS</em>'2024), (<font color="red"><i>Oral</i></font>), Vancouver, Canada.
+              Annual Conference on Neural Information Processing Systems Safe Generative AI Workshop (<strong>SafeGenAI @ NeurIPS</strong>), Vancouver, Canada, 2024.
               <br>
               <a href="https://arxiv.org/pdf/2410.10414">pdf</a> /
               <a href="https://github.com/Waffle-Liu/calibration_guard_model">code
@@ -261,14 +261,14 @@
                     <papertitle>Automatic Lyric Transcription and Automatic Music Transcription from Multimodal Singing</papertitle>
                   </a>
                   <br>
-                  <strong>Xiangming Gu</strong>,
+                  <u><strong>Xiangming Gu</strong></u>,
                   <a href="https://www.oulongshen.xyz">Longshen Ou</a>,
                   <a href="https://scholar.google.com/citations?hl=zh-CN&user=Ffq7lrcAAAAJ">Wei Zeng</a>,
                   <a href="https://www.linkedin.com/in/jianan-zhang-a9014a173/?originalSubdomain=cn">Jianan Zhang</a>,
                   <a href="https://nic-wong.carrd.co">Nicholas Wong</a>,
                   <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                   <br>
-                  ACM Transactions on Multimedia Computing Communications and Applications (<em>TOMM</em>'2024).
+                  ACM Transactions on Multimedia Computing Communications and Applications (<strong>TOMM</strong>), 2024.
                   <br>
                   <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">pdf</a> /
                   <a href="https://github.com/guxm2021/SVT_SpeechBrain">code</a> /
@@ -286,11 +286,11 @@
                       <papertitle>Elucidate Gender Fairness in Singing Voice Transcription</papertitle>
                     </a>
                     <br>
-                    <strong>Xiangming Gu</strong>,
+                    <u><strong>Xiangming Gu</strong></u>,
                     <a href="https://scholar.google.com/citations?hl=zh-CN&user=Ffq7lrcAAAAJ">Wei Zeng</a>,
                     <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                     <br>
-                    ACM International Conference on Multimedia (<em>MM</em>'2023), Ottawa, Canada.
+                    ACM International Conference on Multimedia (<strong>MM</strong>), Ottawa, Canada, 2023.
                     <br>
                     <a href="pdf/ACMMM2023.pdf">pdf</a> /
                     <a href="https://github.com/guxm2021/SVT_SpeechBrain">code</a> /
@@ -307,15 +307,15 @@
                   </td> -->
                     <td style="padding:10px;width:100%;vertical-align:middle">
                       <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">
-                        <papertitle>MM-ALT: A Multimodal Automatic Lyric Transcription System</papertitle>
+                        <papertitle>MM-ALT: A Multimodal Automatic Lyric Transcription System</papertitle>  (<font color="red"><strong>Oral, Top Paper Award</strong></font>)
                       </a>
                       <br>
-                      <strong>Xiangming Gu</strong>*,
+                      <u><strong>Xiangming Gu</strong></u>*,
                       <a href="https://www.oulongshen.xyz">Longshen Ou</a>*,
                       <a href="https://www.linkedin.com/in/danielle-ong-854b88177/">Danielle Ong</a>,
                       <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                       <br>
-                      ACM International Conference on Multimedia (<em>MM</em>'2022), (<font color="red"><i>Oral, Top Paper Award</i></font>), Lisbon, Portugal.
+                      ACM International Conference on Multimedia (<strong>MM</strong>), Lisbon, Portugal, 2022.
                       <br>
                       <a href="pdf/ACMMM2022.pdf">pdf</a> /
                       <a href="pdf/ACMMM2022_Appendix.pdf">appendix</a> /
@@ -341,10 +341,10 @@
                         </a>
                         <br>
                         <a href="https://www.oulongshen.xyz">Longshen Ou</a>*,
-                        <strong>Xiangming Gu</strong>*,
+                        <u><strong>Xiangming Gu</strong></u>*,
                         <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                         <br>
-                        International Society for Music Information Retrieval Conference (<em>ISMIR</em>'2022), Bengaluru, India.
+                        International Society for Music Information Retrieval Conference (<strong>ISMIR</strong>), Bengaluru, India, 2022.
                         <br>
                         <a href="pdf/ISMIR2022.pdf">pdf</a> /
                         <!-- <a href="data/ou2022towards.bib">bibtex</a> / -->
@@ -398,7 +398,7 @@
                 <a href="https://waffle-liu.github.io">Hongfu Liu</a>,
                 <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                 <br>
-                Annual Conference on Neural Information Processing Systems (<em>NeurIPS</em>'2022), New Orleans, USA.
+                Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), New Orleans, USA, 2022.
                 <br>
                 <a href="pdf/NeurIPS2022.pdf">pdf</a> /
                 <!-- <a href="data/huang2022.bib">bibtex</a> / -->
@@ -424,7 +424,7 @@
                   <a href="http://www.wanghao.in">Hao Wang</a>,
                   <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                   <br>
-                  Transactions on Machine Learning Research (<em>TMLR</em>'2022).
+                  Transactions on Machine Learning Research (<strong>TMLR</strong>), 2022.
                   <br>
                   <a href="pdf/TMLR2022.pdf">pdf</a> /
                   <!-- <a href="data/wei2022unsupervised.bib">bibtex</a> / -->
