--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <tr>
           <td style="padding:10px;width:100%;vertical-align:middle">
             <a href="https://arxiv.org/abs/2410.10781">
-              <papertitle>When Attention Sink Emerges in Language Models: An Empirical View</papertitle> (<font color="red"><strong>Oral</strong></font>)
+              <papertitle>When Attention Sink Emerges in Language Models: An Empirical View</papertitle>
             </a>
             <br>
             <u><strong>Xiangming Gu</strong></u>,
@@ -156,7 +156,7 @@
             <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;,
             <a href="http://linmin.me">Min Lin</a>
             <br>
-            Annual Conference on Neural Information Processing Systems Workshop on Attributing Model Behavior at Scale (<strong>ATTRIB @ NeurIPS</strong>), Vancouver, Canada, 2024.
+            Annual Conference on Neural Information Processing Systems Workshop on Attributing Model Behavior at Scale (<strong>ATTRIB @ NeurIPS</strong>), Vancouver, Canada, 2024. (<font color="red"><strong>Oral</strong></font>)
             <br>
             <a href="https://arxiv.org/pdf/2410.10781">pdf</a> /
             <a href="https://github.com/sail-sg/Attention-Sink">code</a>
@@ -228,7 +228,7 @@
           <tr>
             <td style="padding:10px;width:100%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2410.10414">
-                <papertitle>On Calibration of LLM-based Guard Models for Reliable Content Moderation</papertitle> (<font color="red"><strong>Oral</strong></font>)
+                <papertitle>On Calibration of LLM-based Guard Models for Reliable Content Moderation</papertitle>
               </a>
               <br>
               <a href="https://waffle-liu.github.io">Hongfu Liu</a>&dagger;,
@@ -237,7 +237,7 @@
               <u><strong>Xiangming Gu</strong></u>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
               <br>
-              Annual Conference on Neural Information Processing Systems Safe Generative AI Workshop (<strong>SafeGenAI @ NeurIPS</strong>), Vancouver, Canada, 2024.
+              Annual Conference on Neural Information Processing Systems Safe Generative AI Workshop (<strong>SafeGenAI @ NeurIPS</strong>), Vancouver, Canada, 2024. (<font color="red"><strong>Oral</strong></font>)
               <br>
               <a href="https://arxiv.org/pdf/2410.10414">pdf</a> /
               <a href="https://github.com/Waffle-Liu/calibration_guard_model">code
@@ -307,7 +307,7 @@
                   </td> -->
                     <td style="padding:10px;width:100%;vertical-align:middle">
                       <a href="https://dl.acm.org/doi/10.1145/3503161.3548411">
-                        <papertitle>MM-ALT: A Multimodal Automatic Lyric Transcription System</papertitle>  (<font color="red"><strong>Oral, Top Paper Award</strong></font>)
+                        <papertitle>MM-ALT: A Multimodal Automatic Lyric Transcription System</papertitle>
                       </a>
                       <br>
                       <u><strong>Xiangming Gu</strong></u>*,
@@ -315,7 +315,7 @@
                       <a href="https://www.linkedin.com/in/danielle-ong-854b88177/">Danielle Ong</a>,
                       <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                       <br>
-                      ACM International Conference on Multimedia (<strong>MM</strong>), Lisbon, Portugal, 2022.
+                      ACM International Conference on Multimedia (<strong>MM</strong>), Lisbon, Portugal, 2022. (<font color="red"><strong>Oral, Top Paper Award</strong></font>)
                       <br>
                       <a href="pdf/ACMMM2022.pdf">pdf</a> /
                       <a href="pdf/ACMMM2022_Appendix.pdf">appendix</a> /
