--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                 </a>
                 <br>
                 <a href="https://sites.google.com/view/huanghengguan/homepage">Hengguan Huang</a>&dagger;,
-                <strong>Xiangming Gu</strong>,
+                <u><strong>Xiangming Gu</strong></u>,
                 <a href="http://www.wanghao.in">Hao Wang</a>,
                 <a href="https://smcnus.github.io">Chang Xiao</a>,
                 <a href="https://waffle-liu.github.io">Hongfu Liu</a>,
@@ -420,7 +420,7 @@
                   <br>
                   <a href="https://scholar.google.com/citations?user=4QtVJoEAAAAJ">Wei Wei</a>*,
                   <a href="https://sites.google.com/view/huanghengguan/homepage">Hengguan Huang</a>*,
-                  <strong>Xiangming Gu</strong>,
+                  <u><strong>Xiangming Gu</strong></u>,
                   <a href="http://www.wanghao.in">Hao Wang</a>,
                   <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
                   <br>
