--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Conference reviewer for CVPR 2025, ICLR2025, ACL ARR 2024 June/August/October, NeurIPS 2024, MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2025/2021
+                  Conference reviewer for ICML 2025, CVPR 2025, ICLR 2025, ACL ARR 2024, NeurIPS 2024, MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2025/2021
                   <br>
                   Workshop reviewer for NeurIPS 2024 Workshop on Attributing Model Behavior at Scale, NeurIPS 2024 Safe Generative AI Workshop
                   <br>
