--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
           <ul>
             <li>
+              <strong>[2025.01]</strong>: I made a <a href="pdf/gyss_agent_smith_poster.pdf">poster presentation</a> about Agent Smith during Global Young Scientists Summit 2025!
+            </li>
+            <li>
               <strong>[2024.10]</strong>: I was selected as a participant for Global Young Scientists Summit 2025!
             </li>
             <li>
@@ -218,7 +221,8 @@
               <a href="https://github.com/sail-sg/Agent-Smith">code</a> /
               <a href="https://youtu.be/_UHudWD9lmY">video</a> /
               <a href="pdf/ICML2024_slides.pdf">slides</a> /
-              <a href="pdf/ICML2024_poster.pdf">poster</a> /
+              <a href="pdf/ICML2024_poster.pdf">ICML poster</a> /
+              <a href="pdf/gyss_agent_smith_poster.pdf">GYSS poster</a> /
               <a href="https://www.wired.com/story/here-come-the-ai-worms/?utm_social-type=owned&utm_source=linkedin&utm_medium=social&utm_campaign=wired&utm_brand=wired&mbid=social_linkedin">press</a>
               <!-- <p>We present <i>infectious jailbreak</i>, which entails the adversary simply jailbreaking a single agent, and without any further intervention from the adversary, (almost) all agents will become infected exponentially fast and exhibit harmful behaviors. Our results show that feeding an (infectious) adversarial image into the memory of any randomly chosen agent is sufficient to achieve infectious jailbreak in multi-agent environments containing up to <i>one million</i> LLaVA-1.5 agents. Finally, we derive a simple principle for determining whether a defense mechanism can provably restrain the spread of infectious jailbreak.</p> -->
               <!-- <p></p> -->
