--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 I am also a research intern at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>. I am mentored by Dr. <a href="https://p2333.github.io">Tianyu Pang</a> and Dr. <a href="https://duchao0726.github.io">Chao Du</a>, and working closely with Dr. <a href="https://siviltaram.github.io">Qian Liu</a>, and Dr. <a href="https://linmin.me">Min Lin</a>.
               </p>
               <p>
-                My research topics include: (i) <strong>generative models</strong>: attention sink of LLMs [<a href="">ATTRIB @ NeurIPS'2024 Oral</a>], and memorization of Diffusion Models [<a href="https://arxiv.org/pdf/2310.02664">Arxiv'2023</a>]; (ii) <strong>trustworthy AI</strong>: infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/pdf/5e3d2c9612d18846d22f7e5dc0568925afb9f6ca.pdf">ICML'2024</a>], and confidence calibration on LLM guard models [<a href="https://arxiv.org/abs/2410.10414">SafeGenAI @ NeurIPS'2024 Oral</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
+                My research topics include: (i) <strong>generative models</strong>: attention sink of LLMs [<a href="">ICLR'2025</a>], and memorization of Diffusion Models [<a href="https://arxiv.org/pdf/2310.02664">Arxiv'2023</a>]; (ii) <strong>trustworthy AI</strong>: infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/pdf/5e3d2c9612d18846d22f7e5dc0568925afb9f6ca.pdf">ICML'2024</a>], and confidence calibration on LLM guard models [<a href="https://arxiv.org/abs/2410.10414">ICLR'2025</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
@@ -52,6 +52,9 @@
             <heading>News</heading>
 
           <ul>
+            <li>
+              <strong>[2025.01]</strong>: Two papers got accepted to International Conference on Learning Representations (<i>ICLR</i>'2025)!
+            </li>
             <li>
               <strong>[2025.01]</strong>: I made a <a href="pdf/gyss_agent_smith_poster.pdf">poster presentation</a> about Agent Smith during Global Young Scientists Summit 2025!
             </li>
@@ -159,7 +162,9 @@
             <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;,
             <a href="http://linmin.me">Min Lin</a>
             <br>
-            Annual Conference on Neural Information Processing Systems Workshop on Attributing Model Behavior at Scale (<strong>ATTRIB @ NeurIPS</strong>), Vancouver, Canada, 2024. (<font color="red"><strong>Oral</strong></font>)
+              International Conference on Learning Representations (<strong>ICLR</strong>), Singapore, Singapore, 2025.
+            <br>
+            Also in Annual Conference on Neural Information Processing Systems Workshop on Attributing Model Behavior at Scale (<strong>ATTRIB @ NeurIPS</strong>), Vancouver, Canada, 2024. (<font color="red"><strong>Oral</strong></font>)
             <br>
             <a href="https://arxiv.org/pdf/2410.10781">pdf</a> /
             <a href="https://github.com/sail-sg/Attention-Sink">code</a>
@@ -241,7 +246,9 @@
               <u><strong>Xiangming Gu</strong></u>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>
               <br>
-              Annual Conference on Neural Information Processing Systems Safe Generative AI Workshop (<strong>SafeGenAI @ NeurIPS</strong>), Vancouver, Canada, 2024. (<font color="red"><strong>Oral</strong></font>)
+              International Conference on Learning Representations (<strong>ICLR</strong>), Singapore, Singapore, 2025.
+              <br>
+              Also in Annual Conference on Neural Information Processing Systems Safe Generative AI Workshop (<strong>SafeGenAI @ NeurIPS</strong>), Vancouver, Canada, 2024. (<font color="red"><strong>Oral</strong></font>)
               <br>
               <a href="https://arxiv.org/pdf/2410.10414">pdf</a> /
               <a href="https://github.com/Waffle-Liu/calibration_guard_model">code
@@ -659,7 +666,7 @@
                 <td width="100%" valign="center">
                   Conference reviewer for ICML 2025, CVPR 2025, ICLR 2025, ACL ARR 2024, NeurIPS 2024, MM 2024, ECCV 2024, IJCAI 2024, ICCV 2023, AISTATS 2025/2021
                   <br>
-                  Workshop reviewer for NeurIPS 2024 Workshop on Attributing Model Behavior at Scale, NeurIPS 2024 Safe Generative AI Workshop
+                  Workshop reviewer for (i) ICLR 2025 Workshop on Deep Generative Model in Machine Learning: Theory, Principle and Efficacy, (ii) NeurIPS 2024 Workshop on Attributing Model Behavior at Scale, (iii) NeurIPS 2024 Safe Generative AI Workshop
                   <br>
                   Journal reviewer for TOMM, TASLP, RA-L
                 </td>
