--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 I am also a research intern at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>. I am mentored by Dr. <a href="https://p2333.github.io">Tianyu Pang</a> and Dr. <a href="https://duchao0726.github.io">Chao Du</a>, and working closely with Dr. <a href="https://siviltaram.github.io">Qian Liu</a>, and Dr. <a href="https://linmin.me">Min Lin</a>.
               </p>
               <p>
-                My research topics include: (i) <strong>generative models</strong>: attention sink of LLMs [<a href="">ICLR'2025</a>], and memorization of Diffusion Models [<a href="https://arxiv.org/pdf/2310.02664">Arxiv'2023</a>]; (ii) <strong>trustworthy AI</strong>: infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/pdf/5e3d2c9612d18846d22f7e5dc0568925afb9f6ca.pdf">ICML'2024</a>], and confidence calibration on LLM guard models [<a href="https://arxiv.org/abs/2410.10414">ICLR'2025</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
+                My research topics include: (i) <strong>generative models</strong>: attention sink of LLMs [<a href="https://arxiv.org/abs/2410.10781">ICLR'2025</a>], and memorization of Diffusion Models [<a href="https://arxiv.org/pdf/2310.02664">TMLR'2025</a>]; (ii) <strong>trustworthy AI</strong>: infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/pdf/5e3d2c9612d18846d22f7e5dc0568925afb9f6ca.pdf">ICML'2024</a>], and confidence calibration on LLM guard models [<a href="https://arxiv.org/abs/2410.10414">ICLR'2025</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
@@ -53,7 +53,7 @@
 
           <ul>
             <li>
-              <strong>[2025.01]</strong>: Two papers got accepted to International Conference on Learning Representations (<i>ICLR</i>'2025)!
+              <strong>[2025.01]</strong>: Two papers got accepted to International Conference on Learning Representations (<i>ICLR</i>'2025), one paper got accepted to Transactions on Machine Learning Research (<i>TMLR</i>'2025)!
             </li>
             <li>
               <strong>[2025.01]</strong>: I made a <a href="pdf/gyss_agent_smith_poster.pdf">poster presentation</a> about Agent Smith during Global Young Scientists Summit 2025!
@@ -185,7 +185,7 @@
               <a href="http://linmin.me">Min Lin</a>,
               <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>&dagger;
               <br>
-              Preprints, 2023.
+              Transactions on Machine Learning Research (<strong>TMLR</strong>), 2025.
               <br>
               <a href="https://arxiv.org/pdf/2310.02664.pdf">pdf</a> /
               <a href="https://github.com/sail-sg/DiffMemorize">code</a>		
