--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
               <p>
                 My research topics include: (i) <strong>generative models</strong>: demystifying attention sink in LLMs [<a href="https://arxiv.org/abs/2410.10781">ICLR'2025</a>], and demystifying memorization in diffusion models [<a href="https://arxiv.org/pdf/2310.02664">TMLR'2025</a>]; (ii) <strong>AI safety</strong>: introducing infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/pdf/5e3d2c9612d18846d22f7e5dc0568925afb9f6ca.pdf">ICML'2024</a>], and elucidating confidence calibration on LLM guard models [<a href="https://arxiv.org/abs/2410.10414">ICLR'2025</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
               </p>
-              <p>
+              <!-- <p>
                 <font color="red"><strong>I am looking for full-time research scientist positions, please contact me if you are interested in my research.</strong></font>
-              </p>
+              </p> -->
 
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
@@ -667,7 +667,7 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Conference reviewer for NeurIPS 2024, ICML 2025, ICLR 2025, CVPR 2025, ICCV 2025/2023, ECCV 2024, ACL ARR 2025/2024, MM 2024, IJCAI 2024, AISTATS 2025/2021
+                  Conference reviewer for NeurIPS 2025/2024, ICML 2025, ICLR 2025, CVPR 2025, ICCV 2025/2023, ECCV 2024, ACL ARR 2025/2024, MM 2025/2024, IJCAI 2024, AISTATS 2025/2021
                   <br>
                   Workshop reviewer for (i) ICLR 2025 Workshop on Deep Generative Model in Machine Learning: Theory, Principle and Efficacy, (ii) NeurIPS 2024 Workshop on Attributing Model Behavior at Scale, (iii) NeurIPS 2024 Safe Generative AI Workshop
                   <br>
