--- a/index.html
+++ b/index.html
@@ -639,8 +639,8 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Participant for Global Young Scientists Summit, 2025
-                  <br>
+                  <!-- Participant for Global Young Scientists Summit, 2025
+                  <br> -->
                   Dean's Graduate Research Excellence Award, National University of Singapore, 2024
                   <br>
                   Research Incentive Award, National University of Singapore, 2023
