--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           <ul>
             <li>
-              <strong>[2025.02]</strong>: I made my thesis proposal presentation!
+              <strong>[2025.03]</strong>: I passed my Ph.D. thesis proposal review!
             </li>
             <li>
               <strong>[2025.02]</strong>: I was invited to give a talk titled <a href="pdf/Research_week_talk.pdf">On the Interpretability and Safety of Generative Models</a> by <a href="https://researchweek.comp.nus.edu.sg/computing/">research week open house</a> of NUS!
@@ -66,7 +66,7 @@
               <strong>[2025.01]</strong>: Two papers with one spotlight and one poster got accepted to International Conference on Learning Representations (<i>ICLR</i>'2025), one paper got accepted to Transactions on Machine Learning Research (<i>TMLR</i>'2025)!
             </li>
             <li>
-              <strong>[2025.01]</strong>: I made a <a href="pdf/gyss_agent_smith_poster.pdf">poster presentation</a> about Agent Smith during <a href="https://gyss.nrf.gov.sg">Global Young Scientists Summit 2025</a>!
+              <strong>[2025.01]</strong>: I gave a <a href="pdf/gyss_agent_smith_poster.pdf">poster presentation</a> about Agent Smith during <a href="https://gyss.nrf.gov.sg">Global Young Scientists Summit 2025</a>!
             </li>
             <li>
               <strong>[2024.10]</strong>: I was selected as a participant for <a href="https://gyss.nrf.gov.sg">Global Young Scientists Summit 2025</a>!
@@ -200,6 +200,28 @@
               <a href="https://arxiv.org/pdf/2310.02664.pdf">pdf</a> /
               <a href="https://github.com/sail-sg/DiffMemorize">code</a>		
               <!-- <p>We first show that the theoretical optimum of denoising score matching can only replicate training data, which contradicts the generalization ability of state-of-the-art diffusion models. Then we explore the conditions under which trained diffusion models will demonstrate the similar memorization behaviors as well as the influential factors from three facets of data distribution, model configuration, and training procedure. Intriguingly, we find that conditioning training data on uninformative random labels can significantly trigger the memorization in diffusion models.</p> -->
+              <!-- <p></p> -->
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:10px;width:100%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2503.15450">
+                <papertitle>SkyLadder: Better and Faster Pretraining via Context Window Scheduling</papertitle>
+              </a>
+              <br>
+              <a href="https://tongyao-zhu.github.io/">Tongyao Zhu</a>,
+              <a href="https://siviltaram.github.io">Qian Liu</a>&dagger;,
+              <a href="https://charles-haonan-wang.me/">Haonan Wang</a>,
+              <a href="https://shiqichen17.github.io/">Shiqi Chen</a>,
+              <u><strong>Xiangming Gu</strong></u>,
+              <a href="https://p2333.github.io">Tianyu Pang</a>,
+              <a href="https://www.comp.nus.edu.sg/~kanmy/">Min-Yen Kan</a>
+              <br>
+                International Conference on Learning Representations Workshop on Open Science for Foundation Models (<strong>SCI-FM @ ICLR</strong>), Singapore, Singapore, 2025.
+              <br>
+              <a href="https://arxiv.org/pdf/2503.15450">pdf</a> /
+              <a href="https://github.com/sail-sg/SkyLadder">code</a>
               <!-- <p></p> -->
             </td>
           </tr>
