--- a/index.html
+++ b/index.html
@@ -177,7 +177,10 @@
             Also in Annual Conference on Neural Information Processing Systems Workshop on Attributing Model Behavior at Scale (<strong>ATTRIB @ NeurIPS</strong>), Vancouver, Canada, 2024. (<font color="red"><strong>Oral</strong></font>)
             <br>
             <a href="https://arxiv.org/pdf/2410.10781">pdf</a> /
-            <a href="https://github.com/sail-sg/Attention-Sink">code</a>
+            <a href="https://github.com/sail-sg/Attention-Sink">code</a> /
+            <a href="https://recorder-v3.slideslive.com/?share=98601&s=8d817838-dc1b-4cd7-aa9a-a6ab678811ef">video</a> /
+            <a href="pdf/ICLR2025_slides.pdf">slides</a> /
+            <a href="pdf/ICLR2025_poster.pdf">poster</a>
             <!-- <p></p> -->
           </td>
         </tr>
