--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:10px;width:100%;vertical-align:middle">
-            <heading>Selected Research</heading>
+            <heading>Research</heading>
           </td>
         </tr>
       </tbody></table>
@@ -203,6 +203,27 @@
               <a href="https://arxiv.org/pdf/2310.02664.pdf">pdf</a> /
               <a href="https://github.com/sail-sg/DiffMemorize">code</a>		
               <!-- <p>We first show that the theoretical optimum of denoising score matching can only replicate training data, which contradicts the generalization ability of state-of-the-art diffusion models. Then we explore the conditions under which trained diffusion models will demonstrate the similar memorization behaviors as well as the influential factors from three facets of data distribution, model configuration, and training procedure. Intriguingly, we find that conditioning training data on uninformative random labels can significantly trigger the memorization in diffusion models.</p> -->
+              <!-- <p></p> -->
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:10px;width:100%;vertical-align:middle">
+              <a href="https://arxiv.org/abs/2504.02732">
+                <papertitle>Why do LLMs attend to the first token?</papertitle>
+              </a>
+              <br>
+              <a href="https://federicobarbero.com">Federico Barbero</a>*&dagger;,
+              <a href="https://scholar.google.co.uk/citations?user=P1qHzNYAAAAJ&hl=en">Álvaro Arroyo</a>*,
+              <u><strong>Xiangming Gu</strong></u>,
+              <a href="https://cperivol.com">Christos Perivolaropoulos</a>,
+              <a href="https://www.cs.ox.ac.uk/people/michael.bronstein/">Michael Bronstein</a>,
+              <a href="https://petar-v.com/">Petar Veličković</a>,
+              <a href="https://sites.google.com/view/razp/home">Razvan Pascanu</a>
+              <br>
+                Preprints, 2025.
+              <br>
+              <a href="https://arxiv.org/pdf/2504.02732">pdf</a>
               <!-- <p></p> -->
             </td>
           </tr>
