--- a/index.html
+++ b/index.html
@@ -718,6 +718,8 @@
               
               <tr>
                 <td width="100%" valign="center">
+                  <a href="https://far.ai/events/event-list/singapore-aw-25">Singapore Alignment Workshop</a>, poster presentation on <a href="pdf/gyss_agent_smith_poster.pdf">Agent Smith: A Single Image Can Jailbreak One Million Multimodal LLM Agents Exponentially Fast</a>, 2025
+                  <br>
                   <a href="https://researchweek.comp.nus.edu.sg/computing/">NUS Research Week Open House</a>, invited talk on <a href="pdf/Research_week_talk.pdf">On the Interpretability and Safety of Generative Models </a>, 2025
                   <br>
                   <a href="https://gyss.nrf.gov.sg">Global Young Scientists Summit</a>, poster presentation on <a href="pdf/gyss_agent_smith_poster.pdf">Agent Smith: A Single Image Can Jailbreak One Million Multimodal LLM Agents Exponentially Fast</a>, 2025
