--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
               <p style="text-align:center">
                 <name>Xiangming Gu</name>
               </p>
-              <p>I am a fourth-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
+              <p>I am a final-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
               </p>
               <p>
-                I am also a research intern at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>. I am mentored by Dr. <a href="https://p2333.github.io">Tianyu Pang</a> and Dr. <a href="https://duchao0726.github.io">Chao Du</a>, and working closely with Dr. <a href="https://siviltaram.github.io">Qian Liu</a>, and Dr. <a href="https://linmin.me">Min Lin</a>.
+                I am a student researcher at <a href="https://deepmind.google/">Google Deepmind (GDM)</a> in London, United Kingdom, where I am hosted by Dr. <a href="https://petar-v.com/">Petar Veličković</a> and Dr. <a href="https://scholar.google.ru/citations?user=jM6Y0yAAAAAJ&hl=en">Larisa Markeeva</a>. I was a research intern at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>, where I was mentored by Dr. <a href="https://p2333.github.io">Tianyu Pang</a> and Dr. <a href="https://duchao0726.github.io">Chao Du</a>, and worked closely with Dr. <a href="https://siviltaram.github.io">Qian Liu</a>, and Dr. <a href="https://linmin.me">Min Lin</a>.
               </p>
               <p>
-                Currently, my main research focus is <strong>understanding and advancing generative models as well as the safety deployment of generative models</strong>. During my earlier Ph.D. journey, I have done some work on bayesian deep learning, and application of machine learning to singing/speech domain. 
+                Currently, my main research focus is <strong>understanding, advancing and safety deployment of generative models</strong>. During my earlier Ph.D. journey, I have done some work on bayesian deep learning, and application of machine learning to singing/speech domain. 
               </p>
               <!-- <p>
                 My research topics include: (i) <strong>generative models</strong>: demystifying attention sink in LLMs [<a href="https://openreview.net/forum?id=78Nn4QJTEN">ICLR'2025 Spotlight</a>], and demystifying memorization in diffusion models [<a href="https://openreview.net/forum?id=D3DBqvSDbj">TMLR'2025</a>]; (ii) <strong>AI safety</strong>: introducing infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/forum?id=DYMj03Gbri">ICML'2024</a>], and elucidating confidence calibration on LLM guard models [<a href="https://openreview.net/forum?id=wUbum0nd9N">ICLR'2025</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
@@ -59,6 +59,9 @@
             <heading>News</heading>
 
           <ul>
+            <li>
+              <strong>[2025.05]</strong>: I joined <a href="https://deepmind.google/">Google Deepmind (GDM)</a> as a student researcher in London, United Kingdom!
+            </li>
             <li>
               <strong>[2025.03]</strong>: I passed my Ph.D. thesis proposal review!
             </li>
