--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 
           <ul>
             <li>
+              <strong>[2025.05]</strong>: I was invited to give a talk on <a href="pdf/ASAP_seminar_attention_sink.pdf">When Attention Sink Emerges in Language Models: An Empirical View</a> by  <a href="https://asap-seminar.github.io">ASAP Seminar Series</a>!
+            </li>
+            <li>
               <strong>[2025.05]</strong>: I joined <a href="https://deepmind.google/">Google Deepmind (GDM)</a> as a student researcher in London, United Kingdom!
             </li>
             <li>
@@ -721,6 +724,8 @@
               
               <tr>
                 <td width="100%" valign="center">
+                  <a href="https://asap-seminar.github.io">ASAP Seminar Series</a>, invited talk on <a href="pdf/ASAP_seminar_attention_sink.pdf">When Attention Sink Emerges in Language Models: An Empirical View</a>, 2025
+                  <br>
                   <a href="https://far.ai/events/event-list/singapore-aw-25">Singapore Alignment Workshop</a>, poster presentation on <a href="pdf/gyss_agent_smith_poster.pdf">Agent Smith: A Single Image Can Jailbreak One Million Multimodal LLM Agents Exponentially Fast</a>, 2025
                   <br>
                   <a href="https://researchweek.comp.nus.edu.sg/computing/">NUS Research Week Open House</a>, invited talk on <a href="pdf/Research_week_talk.pdf">On the Interpretability and Safety of Generative Models </a>, 2025
