--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
             <a href="https://arxiv.org/pdf/2410.10781">pdf</a> /
             <a href="https://github.com/sail-sg/Attention-Sink">code</a> /
             <a href="https://recorder-v3.slideslive.com/?share=98601&s=8d817838-dc1b-4cd7-aa9a-a6ab678811ef">video</a> /
+            <a href="https://youtu.be/nII3utiA06g">long talk</a> /
             <a href="pdf/ICLR2025_slides.pdf">slides</a> /
             <a href="pdf/ICLR2025_poster.pdf">poster</a>
             <!-- <p></p> -->
