--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
 
           <ul>
             <li>
+              <strong>[2024.07]</strong>: One paper got accepted to Conference on Language Modeling (<i>COLM</i>'2025)!
+            </li>
+            <li>
+              <strong>[2024.06]</strong>: I was glad to give a talk about <a href="">Understanding Attention Sink in (Large) Language Models</a> in the team of Deep Learning: Agent Frontier at Google Deepmind.
+            </li>
+            <li>
               <strong>[2025.05]</strong>: I was invited to give a talk on <a href="pdf/ASAP_seminar_attention_sink.pdf">When Attention Sink Emerges in Language Models: An Empirical View</a> by  <a href="https://asap-seminar.github.io">ASAP Seminar Series</a>!
             </li>
             <li>
@@ -220,7 +226,7 @@
           <tr>
             <td style="padding:10px;width:100%;vertical-align:middle">
               <a href="https://arxiv.org/abs/2504.02732">
-                <papertitle>Why do LLMs attend to the first token?</papertitle>
+                <papertitle>Why Do LLMs Attend to the First Token?</papertitle>
               </a>
               <br>
               <a href="https://federicobarbero.com">Federico Barbero</a>*&dagger;,
@@ -231,7 +237,7 @@
               <a href="https://petar-v.com/">Petar Veličković</a>,
               <a href="https://sites.google.com/view/razp/home">Razvan Pascanu</a>
               <br>
-                Preprints, 2025.
+                Conference on Language Modeling (<strong>COLM</strong>), 2025.
               <br>
               <a href="https://arxiv.org/pdf/2504.02732">pdf</a>
               <!-- <p></p> -->
@@ -725,6 +731,8 @@
               
               <tr>
                 <td width="100%" valign="center">
+                  Google Deepmind Team Deep Learning: Agent Frontier, talk on <a href="">Understanding Attention Sink in (Large) Language Models</a>, 2025
+                  <br>
                   <a href="https://asap-seminar.github.io">ASAP Seminar Series</a>, invited talk on <a href="pdf/ASAP_seminar_attention_sink.pdf">When Attention Sink Emerges in Language Models: An Empirical View</a>, 2025
                   <br>
                   <a href="https://far.ai/events/event-list/singapore-aw-25">Singapore Alignment Workshop</a>, poster presentation on <a href="pdf/gyss_agent_smith_poster.pdf">Agent Smith: A Single Image Can Jailbreak One Million Multimodal LLM Agents Exponentially Fast</a>, 2025
