--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               <a href="https://petar-v.com/">Petar Veličković</a>,
               <a href="https://sites.google.com/view/razp/home">Razvan Pascanu</a>
               <br>
-                Conference on Language Modeling (<strong>COLM</strong>), 2025.
+                Conference on Language Modeling (<strong>COLM</strong>), Montreal, Canada, 2025.
               <br>
               <a href="https://arxiv.org/pdf/2504.02732">pdf</a>
               <!-- <p></p> -->
