--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
                 <!-- I am a final-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021. -->
               </p>
               <p>
-                I am a student researcher at <a href="https://deepmind.google/">Google Deepmind (GDM)</a> in London, United Kingdom, where I am hosted by Dr. <a href="https://petar-v.com/">Petar Veličković</a> and Dr. <a href="https://scholar.google.ru/citations?user=jM6Y0yAAAAAJ&hl=en">Larisa Markeeva</a>.
-              </p>
-              <p>
-                I was lucky to be mentored by Dr. <a href="https://p2333.github.io">Tianyu Pang</a> and Dr. <a href="https://duchao0726.github.io">Chao Du</a> at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>, Singapore, where I also worked closely with Dr. <a href="https://siviltaram.github.io">Qian Liu</a>, and Dr. <a href="https://linmin.me">Min Lin</a>.
+                I am a student researcher at <a href="https://deepmind.google/">Google Deepmind</a> in London, United Kingdom, where I am hosted by <a href="https://petar-v.com/">Petar Veličković</a> and <a href="https://scholar.google.ru/citations?user=jM6Y0yAAAAAJ&hl=en">Larisa Markeeva</a>. I was lucky to be mentored by <a href="https://p2333.github.io">Tianyu Pang</a> and <a href="https://duchao0726.github.io">Chao Du</a> at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>, Singapore, where I also worked closely with <a href="https://siviltaram.github.io">Qian Liu</a> and <a href="https://linmin.me">Min Lin</a>.
               </p>
               <p>
                 My current research focus is to <strong>understand, advance and safely deploy generative models and agents</strong>.
