--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
             
             <tr>
               <td width="100%" valign="center">
-                I love tourism, movies, walking, etc. I have been lived in 🇨🇳🇸🇬🇬🇧, and travelled to 🇹🇭🇫🇮🇵🇹🇧🇪🇺🇸🇭🇰🇲🇾🇨🇦🇦🇪🇦🇹🇯🇵🇭🇺🇨🇿🇮🇹🇻🇦🇭🇷🇫🇷🇨🇭🇩🇪 for holidays/conferences.
+                I love tourism, movies, food, etc. I have been lived in 🇨🇳🇸🇬🇬🇧, and travelled to 🇹🇭🇫🇮🇵🇹🇧🇪🇺🇸🇭🇰🇲🇾🇨🇦🇦🇪🇦🇹🇯🇵🇭🇺🇨🇿🇮🇹🇻🇦🇭🇷🇫🇷🇨🇭🇩🇪 for holidays/conferences.
                 <br>
               </td>
             </tr>
