--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <name>Xiangming Gu</name>
               </p>
               <p>
-                I am a final-year Ph.D. candidate from <a href="https://www.nus.edu.sg">National University of Singapore</a>, supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. Before that, I earned my B.E. degree of Electronic Engineering and B.S. degree of Finance from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
+                I am a final-year Ph.D. candidate from <a href="https://www.nus.edu.sg">National University of Singapore</a>, supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I earned my B.E. degree of Electronic Engineering and B.S. degree of Finance from <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021.
 
                 <!-- I am a final-year Ph.D. candidate from <a href="https://smcnus.github.io">NUS Sound and Music Computing Lab</a>, where I am supervised by Prof. <a href="https://www.comp.nus.edu.sg/cs/people/wangye/">Ye Wang</a>. I am affiliated to <a href="https://isep.nus.edu.sg">Integrative Sciences and Engineering Programme</a> and <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Before that, I obtained my B.E. degree of Electronic Engineering and B.S. degree of Finance at <a href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a> in 2021. -->
               </p>
@@ -29,14 +29,14 @@
                 I am a student researcher at <a href="https://deepmind.google/">Google Deepmind</a> in London, United Kingdom, where I am hosted by <a href="https://petar-v.com/">Petar Veličković</a> and <a href="https://scholar.google.ru/citations?user=jM6Y0yAAAAAJ&hl=en">Larisa Markeeva</a>. I was lucky to be mentored by <a href="https://p2333.github.io">Tianyu Pang</a> and <a href="https://duchao0726.github.io">Chao Du</a> at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>, Singapore, where I also worked closely with <a href="https://siviltaram.github.io">Qian Liu</a> and <a href="https://linmin.me">Min Lin</a>.
               </p>
               <p>
-                My current research focus is to <strong>understand, advance and safely deploy generative models and agents</strong>.
+                My current research focus is to <strong>understand, advance and safely deploy generative models and agents</strong>. One of my long-term goals is to use agents for challenging problems, such as scientific discovery.
               </p>
               <!-- <p>
                 My research topics include: (i) <strong>generative models</strong>: demystifying attention sink in LLMs [<a href="https://openreview.net/forum?id=78Nn4QJTEN">ICLR'2025 Spotlight</a>], and demystifying memorization in diffusion models [<a href="https://openreview.net/forum?id=D3DBqvSDbj">TMLR'2025</a>]; (ii) <strong>AI safety</strong>: introducing infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/forum?id=DYMj03Gbri">ICML'2024</a>], and elucidating confidence calibration on LLM guard models [<a href="https://openreview.net/forum?id=wUbum0nd9N">ICLR'2025</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
               </p> -->
-              <!-- <p>
+              <p>
                 <font color="red"><strong>I am looking for full-time research scientist positions, please contact me if you are interested in my research.</strong></font>
-              </p> -->
+              </p>
 
               <p style="text-align:center">
                 <a href="mailto:xiangming@u.nus.edu">Email</a> &nbsp/&nbsp
@@ -760,10 +760,10 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Conference reviewer for NeurIPS 2025/2024, ICML 2025, ICLR 2025, CVPR 2025, ICCV 2025/2023, ECCV 2024, ACL ARR 2025/2024, MM 2025/2024, IJCAI 2024, AISTATS 2026/2025/2021
+                  Conference reviewer for NeurIPS 2025/2024, ICML 2025, ICLR 2026/2025, CVPR 2026/2025, ICCV 2025/2023, ECCV 2024, ACL ARR 2025/2024, MM 2025/2024, IJCAI 2024, AISTATS 2026/2025/2021
                   <br>
-                  Workshop reviewer for (i) ICLR 2025 Workshop on Deep Generative Model in Machine Learning: Theory, Principle and Efficacy, (ii) NeurIPS 2024 Workshop on Attributing Model Behavior at Scale, (iii) NeurIPS 2024 Safe Generative AI Workshop
-                  <br>
+                  <!-- Workshop reviewer for (i) ICLR 2025 Workshop on Deep Generative Model in Machine Learning: Theory, Principle and Efficacy, (ii) NeurIPS 2024 Workshop on Attributing Model Behavior at Scale, (iii) NeurIPS 2024 Safe Generative AI Workshop
+                  <br> -->
                   Journal reviewer for TPAMI, TOMM, TASLP, RA-L
                 </td>
               </tr>
