--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
 
           <ul>
             <li>
+              <strong>[2025.09]</strong>: One paper got accepted to Advances in Neural Information Processing Systems (<i>NeurIPS</i>'2025)!
+            </li>
+            <li>
               <strong>[2025.07]</strong>: One paper got accepted to Conference on Language Modeling (<i>COLM</i>'2025)!
             </li>
             <li>
@@ -269,7 +272,9 @@
               <a href="https://p2333.github.io">Tianyu Pang</a>,
               <a href="https://www.comp.nus.edu.sg/~kanmy/">Min-Yen Kan</a>
               <br>
-                International Conference on Learning Representations Workshop on Open Science for Foundation Models (<strong>SCI-FM @ ICLR</strong>), Singapore, Singapore, 2025.
+               Annual Conference on Neural Information Processing Systems (<strong>NeurIPS</strong>), San Diego, USA, 2025.
+              <br>
+                Also in International Conference on Learning Representations Workshop on Open Science for Foundation Models (<strong>SCI-FM @ ICLR</strong>), Singapore, Singapore, 2025.
               <br>
               <a href="https://arxiv.org/pdf/2503.15450">pdf</a> /
               <a href="https://github.com/sail-sg/SkyLadder">code</a>
@@ -310,7 +315,7 @@
               <a href="pdf/ICML2024_slides.pdf">slides</a> /
               <a href="pdf/ICML2024_poster.pdf">ICML poster</a> /
               <a href="pdf/gyss_agent_smith_poster.pdf">GYSS poster</a> /
-              <a href="https://www.wired.com/story/here-come-the-ai-worms/?utm_social-type=owned&utm_source=linkedin&utm_medium=social&utm_campaign=wired&utm_brand=wired&mbid=social_linkedin">press</a>
+              <a href="https://www.wired.com/story/here-come-the-ai-worms/?utm_social-type=owned&utm_source=linkedin&utm_medium=social&utm_campaign=wired&utm_brand=wired&mbid=social_linkedin">WIRED press</a>
               <!-- <p>We present <i>infectious jailbreak</i>, which entails the adversary simply jailbreaking a single agent, and without any further intervention from the adversary, (almost) all agents will become infected exponentially fast and exhibit harmful behaviors. Our results show that feeding an (infectious) adversarial image into the memory of any randomly chosen agent is sufficient to achieve infectious jailbreak in multi-agent environments containing up to <i>one million</i> LLaVA-1.5 agents. Finally, we derive a simple principle for determining whether a defense mechanism can provably restrain the spread of infectious jailbreak.</p> -->
               <!-- <p></p> -->
             </td>
