--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 I am a student researcher at <a href="https://deepmind.google/">Google Deepmind</a> in London, United Kingdom, where I am hosted by <a href="https://petar-v.com/">Petar Veličković</a> and <a href="https://scholar.google.ru/citations?user=jM6Y0yAAAAAJ&hl=en">Larisa Markeeva</a>. I was lucky to be mentored by <a href="https://p2333.github.io">Tianyu Pang</a> and <a href="https://duchao0726.github.io">Chao Du</a> at <a href="https://sail.sea.com">Sea AI lab (SAIL)</a>, Singapore, where I also worked closely with <a href="https://siviltaram.github.io">Qian Liu</a> and <a href="https://linmin.me">Min Lin</a>.
               </p>
               <p>
-                My current research focus is to <strong>understand, advance and safely deploy generative models and agents</strong>. One of my long-term goals is to use agents for challenging problems, such as scientific discovery.
+                My current research focus is to <strong>understand, advance and safely deploy generative models and agents</strong>. One of my long-term goals is to use test-time-scaling/agents for challenging problems, such as scientific discovery.
               </p>
               <!-- <p>
                 My research topics include: (i) <strong>generative models</strong>: demystifying attention sink in LLMs [<a href="https://openreview.net/forum?id=78Nn4QJTEN">ICLR'2025 Spotlight</a>], and demystifying memorization in diffusion models [<a href="https://openreview.net/forum?id=D3DBqvSDbj">TMLR'2025</a>]; (ii) <strong>AI safety</strong>: introducing infectious jailbreak for (multimodal) LLM multi-agents [<a href="https://openreview.net/forum?id=DYMj03Gbri">ICML'2024</a>], and elucidating confidence calibration on LLM guard models [<a href="https://openreview.net/forum?id=wUbum0nd9N">ICLR'2025</a>]; (iii) <strong>singing/speech</strong>: application of machine learning, e.g. multimodal learning [<a href="https://dl.acm.org/doi/pdf/10.1145/3503161.3548411">MM'2022 Oral</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], multi-distribution learning (domain adaptation [<a href="https://arxiv.org/pdf/2207.09747">ISMIR'2022</a>, <a href="https://dl.acm.org/doi/pdf/10.1145/3651310">TOMM'2024</a>], fairness [<a href="https://dl.acm.org/doi/pdf/10.1145/3581783.3612272">MM'2023</a>]), to singing/speech techniques.
@@ -154,7 +154,7 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:10px;width:100%;vertical-align:middle">
-            <heading>Research</heading>
+            <heading>Selected Research</heading>
           </td>
         </tr>
       </tbody></table>
@@ -819,7 +819,7 @@
             
             <tr>
               <td width="100%" valign="center">
-                I love tourism, movies, food, etc. I have been lived in 🇨🇳🇸🇬🇬🇧, and travelled to 🇹🇭🇫🇮🇵🇹🇧🇪🇺🇸🇭🇰🇲🇾🇨🇦🇦🇪🇦🇹🇯🇵🇭🇺🇨🇿🇮🇹🇻🇦🇭🇷🇫🇷🇨🇭🇩🇪 for holidays/conferences.
+                I love tourism, movies, food, etc. I have been lived in 🇨🇳🇸🇬🇬🇧, and travelled to 🇹🇭🇫🇮🇵🇹🇧🇪🇺🇸🇭🇰🇲🇾🇨🇦🇦🇪🇦🇹🇯🇵🇭🇺🇨🇿🇮🇹🇻🇦🇭🇷🇫🇷🇨🇭🇩🇪🇳🇱 for holidays/conferences.
                 <br>
               </td>
             </tr>
