--- a/index.html
+++ b/index.html
@@ -770,9 +770,9 @@
               
               <tr>
                 <td width="100%" valign="center">
-                  Google Deepmind Team Deep Learning: Agent Frontier, talk on <strong>Looking into LLMs: From Tokens to Solutions</strong>, 2025
+                  Google Deepmind Team DL: Agent Frontier, talk on <strong>Looking into LLMs: From Tokens to Solutions</strong>, 2025
                   <br>
-                  Google Deepmind Team Deep Learning: Agent Frontier, talk on <strong>Understanding Attention Sink in (Large) Language Models</strong>, 2025
+                  Google Deepmind Team DL: Agent Frontier, talk on <strong>Understanding Attention Sink in (Large) Language Models</strong>, 2025
                   <br>
                   <a href="https://asap-seminar.github.io">ASAP Seminar Series</a>, invited talk on <a href="pdf/ASAP_seminar_attention_sink.pdf">When Attention Sink Emerges in Language Models: An Empirical View</a>, 2025
                   <br>
